--- a/vercel.json
+++ b/vercel.json
@@ -56,12 +56,12 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "value": "public, max-age=600"
         }
       ]
     },
     {
-      "source": "/(.*).(js|css|png|jpg|svg|wav|mp3)",
+      "source": "/(.*).(wav|mp3)",
       "headers": [
         {
           "key": "Cache-Control",
