--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,6 +5,8 @@
   "start_url": "/",
   "scope": "/",
   "display": "fullscreen",
+    "theme_color": "#B12A34",
+    "background_color": "#B12A34",
   "icons": [
     {
       "src": "/images/logo.png",
