feat(all): 游戏优化

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "情侣飞行棋 - 情侣飞机棋",
-  "short_name": "情侣飞行棋",
+  "name": "情侣小游戏 - 情侣飞机棋",
+  "short_name": "情侣小游戏",
   "description": "创意互动游戏增进感情神器，免费解锁所有关卡",
   "start_url": "/",
   "scope": "/",
